Almost done, adding fetchedResultsController

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -158,6 +158,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentControl" destination="ua8-gT-KW1" id="n00-Mc-MAG"/>
                         <outlet property="textField" destination="K4r-Zc-TBK" id="FjJ-bB-KBl"/>
                         <outlet property="textView" destination="XB3-rU-C9C" id="Bk5-qv-wcl"/>
                     </connections>
